[WIP]18.add2slack: Add privacy policy section.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -41,6 +41,13 @@
              srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
       </a>
     </p>
+    <span>
+      <u>
+      <a href="/about#privacy">
+        Privacy policy
+      </a>
+    </u>
+    </span>
   </div>
 
   <div id="faq" class="row text-center" style="padding-top:40px; padding-bottom: 10px; font-weight: 900;">
@@ -52,7 +59,7 @@
     <div class="col-sm-8 col-sm-offset-2 text-left"
          style="background-color: #FFFFFF;">
       <p>
-        <span style="font-weight: 500;">
+        <span style="color: #0E87FC;">
           Another way to manage the list of tasks I have to complete.  Why is this one better for me?
         </span><br>
           MiaDo was designed for teams with part-time members who don't want to learn a new app and especially,
@@ -60,14 +67,14 @@
       </p>
 
       <p>
-        <span style="font-weight: 500;">
+        <span style="color: #0E87FC;">
           How do I make a private list of tasks?
         </span><br>
            MiaDo is for public lists, private lists are not supported.
       </p>
 
       <p>
-        <span style="font-weight: 500;">
+        <span style="color: #0E87FC;">
           What does the TaskBot do?
         </span><br>
           Your Taskbot will always display your current task list when you click on it.
@@ -75,7 +82,7 @@
       </p>
 
       <p>
-        <span style="font-weight: 500;">
+        <span style="color: #0E87FC;">
           What's the dog's head about?
         </span><br>
           The dog's head represents my dog Mia, who is often Missing In Action
@@ -115,6 +122,50 @@
     </div>
   </div>
 
+  <div id="privacy" class="row text-center" style="padding-top:40px; padding-bottom: 10px; font-weight: 900;">
+      <div class="col-sm-12">
+        <h2>Privacy Policy</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 text-left">
+        <p>
+          <span style="color: #0E87FC;">
+            Stored Data
+          </span><br>
+          The MiaDo User Experience is contained entirely within Slack. Only
+          task lists, your team name, team member names (used to verify task assignments),
+          and Slack permission tokens needed to interact with the Slack
+          API are stored in our database.
+        </p>
+
+        <p>
+          <span style="color: #0E87FC;">
+            Explicitly NOT stored data
+          </span><br>
+            Team member contact information, i.e. email addresses are not stored
+            nor provided to anyone.
+        </p>
+
+        <p>
+          <span style="color: #0E87FC;">
+            Third Party Services
+          </span><br>
+            MiaDo is run securely on the Heroku Platform. Please refer to the
+            Heroku Privacy Policy for more details: https://www.heroku.com/policy/privacy
+        </p>
+
+        <p>
+          <span style="color: #0E87FC;">
+            Revisions
+            </span><br>
+            This privacy policy may change over time.
+        </p>
+
+      </div>
+    </div>
+    <br><br>
+
   <div id="about_me" class="row"
        style="padding-top:40px; padding-bottom: 40px; margin-bottom: 150px; background-color: #FBFBE6; color: #7F7F7F;">
     <div class="col-sm-8 col-sm-offset-2 well"
@@ -139,8 +190,8 @@
               I mean "micro teams" of 2-5 people, mostly startups. A particular problem for her was that
               people were too busy or unwilling "to learn yet another" task manager. So the idea is that
               one person is the adult who assigns and manages the tasks and the other team members just
-              need to simply click on the "tasbot" member to see an updated list of what to do. As a
-              person's assigned tasks changes, the tasbot list is redisplayed in its private channel with
+              need to simply click on the "taskbot" member to see an updated list of what to do. As a
+              person's assigned tasks changes, the taskbot list is redisplayed in its private channel with
               a message waiting indicator. Always in one place, always up to date. As a
               programmer, this works for me too. I just want to easily see, via one click or touch,
               what is currently on my todo list.
