--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -41,6 +41,13 @@
              srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
       </a>
     </p>
+    <span>
+      <u>
+      <a href="/about#privacy">
+        Privacy policy
+      </a>
+    </u>
+    </span>
   </div>
 
   <div id="product" class="row text-center" style="padding-top:40px;">
