--- a/app/views/pages/welcome_add_to_slack_new.html.erb
+++ b/app/views/pages/welcome_add_to_slack_new.html.erb
@@ -11,20 +11,19 @@
           <%= image_tag 'dog_head_icon.png', class: 'img-circle',
               style: 'margin-right: 20px;',
               size: '100x100' %>
-              <%team = @view.locals[:team]
-                provider = @view.locals[:provider]
+              <%
+                install_channel = @view.locals[:install_channel]
                 bot_name = '/do'
-                if provider.nil?
+                if install_channel.nil?
                   user_name = 'No Name'
                   team_name = 'No Name'
                   slack_url = '#'
                 else
-                  user_name = provider.auth_json['info']['name'].titleize
-                  team_blobs = provider.auth_json['info']['team'].split
+                  user_name = install_channel.auth_json['info']['user'].titleize
+                  team_blobs = install_channel.auth_json['info']['team'].split
                   team_blobs.delete_at(team_blobs.size - 1) if (team_blobs[team_blobs.size - 1].downcase) == 'team'
                   team_name = team_blobs.join(' ')
-                  slack_url = team.url unless team.nil?
-                  slack_url = '#' if team.nil?
+                  slack_url = install_channel.auth_json['extra']['raw_info']['url']
                 end
               %>
               <h3>
@@ -38,7 +37,9 @@
           </p>
           <br>
           <br>
-          <h5>MiaDo is beta software, so please let us know at admin@miado.net if you see any problems!</h5>
+          <h5>MiaDo is beta software, so please let us know
+            <a href="/add_to_slack#contact_us"><u>here</u></a> 
+            if you see any problems!</h5>
 
        </center>
      </div>
