[WIP]20.modify-add-to-slack-page-colors: Lettering, well colors.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -92,13 +92,13 @@
   </div>
 
   <br>
-  <div class="row" style="background-color: #F3F9FB; color: #0E87FC">
+  <div class="row" style="background-color: #F3F9FB; color: rgb(31, 143, 249);">
     <br>
     <h4><p class="text-center" style="font-weight: 900;">Additional Miado commands</p></h4>
   </div>
-  <div class="row" style="background-color: #F3F9FB; color: #0E87FC; padding-bottom: 40px;">
+  <div class="row" style="background-color: #F3F9FB; color: rgb(31, 143, 249); padding-bottom: 40px;">
     <div class="col-sm-8 col-sm-offset-2 well text-left"
-         style="background-color: #F3F9FB; box-shadow: 0 2px 2px 0 rgba(0, 0, 255, .14), 0 3px 1px -2px rgba(0, 0, 255, .2), 0 1px 5px 0 rgba(0, 0, 255, .12)">
+         style="background-color: rgb(225, 232, 255); box-shadow: 0 2px 2px 0 rgba(0, 0, 255, .14), 0 3px 1px -2px rgba(0, 0, 255, .2), 0 1px 5px 0 rgba(0, 0, 255, .12)">
       <strong>/do append 3 Contact Jim.</strong>
       &nbsp;&nbsp;&nbsp;&nbsp;Adds "Contact Jim." to the end of task 3.
       <br>
