--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -60,6 +60,16 @@
          style="background-color: #FFFFFF;">
       <p>
         <span style="color: #0E87FC;">
+          How do I add MiaDo to Slack?
+        </span><br>
+          Just click on the Add to Slack button, and MiaDo will be added to
+          Slack and you'll see your taskbot added to team members' names under
+          Direct Messages. Each team member must add MiaDo to get their own
+          taskbot.
+      </p>
+
+      <p>
+        <span style="color: #0E87FC;">
           Another way to manage the list of tasks I have to complete.  Why is this one better for me?
         </span><br>
           MiaDo was designed for teams with part-time members who don't want to learn a new app and especially,
@@ -88,6 +98,15 @@
           The dog's head represents my dog Mia, who is often Missing In Action
           (as were the post-it notes I used to track my to-dos on).
       </p>
+
+       <p>
+        <span style="color: #0E87FC;">
+          Any other questions?
+        </span><br>
+          Click <a href="/add_to_slack#contact_us" class="brand"><u>here</u></a>
+           to contact us.
+        </p>
+
     </div>
   </div>
 
