--- a/app/views/shared/_index_page_header.html.erb
+++ b/app/views/shared/_index_page_header.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-8 css-page-title">
     <div class="media">
       <div class="media-body">
-        <h2 class="media-heading text-center"><%= @view.locals[:title] %></h2>
+        <h2 class="media-heading text-center"><%= locals[:title] %></h2>
       </div>
     </div>
   </div>
