--- a/app/views/channels/admin_views/_index_channel.html.erb
+++ b/app/views/channels/admin_views/_index_channel.html.erb
@@ -1,22 +1,10 @@
 <tr>
-  <% if @view.locals[:channel].dm_user_id == 'USLACKBOT'
-       name = '@slackbot'
-     elsif @view.locals[:channel].dm_user_id == 'directmessage'
-       name = '?miaBot Dm channel?'
-     elsif !@view.locals[:channel].dm_user_id.nil?
-       member = Member.where(slack_user_id: @view.locals[:channel].dm_user_id).first
-       name = '?? unknown' if member.nil?
-       name = "@#{member.name}" unless member.nil?
-     else
-       name = "##{@view.locals[:channel].slack_channel_name}"
-     end
-  %>
-  <td><%= name %></td>
-  <td><%= @view.locals[:channel].slack_channel_id %></td>
-  <td><%= @view.locals[:channel].dm_user_id %></td>
-  <td><%= @view.locals[:channel].archived %></td>
-  <td><%= @view.locals[:channel].deleted %></td>
-  <td><%= @view.locals[:channel].created_at.strftime("%c") %></td>
-  <td><%= @view.locals[:channel].updated_at.strftime("%c") %></td>
-  <td><%= "Tasks(#{ListItem.where(channel_id: @view.locals[:channel].slack_channel_id).count})" %></td>
+  <td><%= locals[:channel].slack_channel_name %></td>
+  <td><%= locals[:channel].slack_channel_id %></td>
+  <td><%= locals[:channel].dm_user_id %></td>
+  <td><%= locals[:channel].archived %></td>
+  <td><%= locals[:channel].deleted %></td>
+  <td><%= locals[:channel].created_at.strftime("%c") %></td>
+  <td><%= locals[:channel].updated_at.strftime("%c") %></td>
+  <td><%= "0" %></td>
 </tr>
