--- a/app/views/layouts/_page_header_navbar_admin_links.html.erb
+++ b/app/views/layouts/_page_header_navbar_admin_links.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <%= link_to "Users", users_path, class: "btn btn-link" %>
-  <%= link_to "Oauth Providers", omniauth_providers_path, class: "btn btn-link" %>
+  <%= link_to "Installations", installations_path, class: "btn btn-link" %>
   <%= link_to "Teams", teams_path, class: "btn btn-link" %>
   <%= link_to "Members", members_path, class: "btn btn-link" %>
   <%= link_to "Channels", channels_path, class: "btn btn-link" %>
