--- a/app/views/layouts/_page_header_navbar_left.html.erb
+++ b/app/views/layouts/_page_header_navbar_left.html.erb
@@ -4,7 +4,7 @@
     <li><%= link_to 'MiaDo', welcome_path, class: 'navbar-brand' %></li>
 
   <% if @view.user_signed_in? %>
-    <li><%= link_to user_teams_path(@view.current_user) do %>
+    <li><%= link_to users_path(@view.current_user) do %>
       <i class="glyphicon glyphicon-home"> </i>&nbsp; Home<% end %>
     </li>
     <li><%= link_to about_path do %>
