--- a/app/views/members/admin_views/_index_member.html.erb
+++ b/app/views/members/admin_views/_index_member.html.erb
@@ -1,9 +1,7 @@
 <tr>
-  <td><%= "@#{@view.locals[:member].name}" %></td>
-  <td><%= @view.locals[:member].real_name %></td>
-  <td><%= @view.locals[:member].is_bot %></td>
-  <td><%= @view.locals[:member].deleted %></td>
-  <td><%= @view.locals[:member].slack_user_id %></td>
-  <td><%= @view.locals[:member].created_at.strftime("%a, %d %b %Y") %></td>
-  <td><%= @view.locals[:member].updated_at.strftime("%c") %></td>
+  <td><%= "@#{locals[:member]['slack_user_name']}" %></td>
+  <td><%= locals[:member]['slack_real_name'] %></td>
+  <td><%= locals[:member]['slack_user_id'] %></td>
+  <td><%= locals[:install_channel].created_at.strftime("%a, %d %b %Y") %></td>
+  <td><%= locals[:install_channel].updated_at.strftime("%c") %></td>
 </tr>
