--- a/app/views/teams/admin_views/_index_team_line1.html.erb
+++ b/app/views/teams/admin_views/_index_team_line1.html.erb
@@ -1,9 +1,9 @@
 <tr>
-  <td><%= link_to @view.locals[:team].user.name, user_path(@view.locals[:team].user) %></td>
-  <td><%= @view.locals[:team].created_at.strftime('%a, %d %b %Y') %></td>
-  <td><%= @view.locals[:team].updated_at.strftime('%c') %></td>
-  <td><%= @view.locals[:team].api_token %></td>
-  <td><%= link_to " (#{@view.locals[:team].members.length})", team_members_path(@view.locals[:team]) %></td>
-  <td><%= link_to " (#{@view.locals[:team].channels.length})", team_channels_path(@view.locals[:team]) %></td>
-  <td><%= link_to " (#{@view.locals[:team].channels.length})", team_items_path(@view.locals[:team]) %></td>
+  <td><u><%= link_to locals[:auth_info]['user'], '' %></u></td>
+  <td><%= locals[:team].created_at.strftime('%a, %d %b %Y') %></td>
+  <td><%= locals[:team].updated_at.strftime('%c') %></td>
+  <td><%= locals[:team].slack_user_api_token.length > 25 ? locals[:team].slack_user_api_token[-25, 25] : locals[:team].slack_user_api_token %></td>
+  <td><%= link_to " (#{locals[:members].length})", team_members_path(locals[:team]) %></td>
+  <td><%= link_to " (#{locals[:channels].length})", team_channels_path(locals[:team]) %></td>
+  <td><%= link_to " (#{locals[:lists].length})", team_items_path(locals[:team]) %></td>
 </tr>
