--- a/app/views/teams/admin_views/_index_team_line2.html.erb
+++ b/app/views/teams/admin_views/_index_team_line2.html.erb
@@ -1,9 +1,7 @@
 <tr>
-  <% bot_member = Member.where(slack_user_id: 'U18F7T2H2').first
-     bot_name = "??(#{@view.locals[:team].bot_user_id})" if bot_member.nil?
-     bot_name = "@#{bot_member.name}" unless bot_member.nil?
+  <% bot_name = "@#{locals[:auth_extra]['bot_info']['bot_user_id']}"
   %>
-  <td><%= link_to bot_name, '#' %></td>
-  <td><%= @view.locals[:team].bot_access_token %></td>
+  <td><u><%= link_to bot_name, '#' %></u></td>
+  <td><%= locals[:team].bot_api_token %></td>
   <td><%= link_to " (0)", '#' %></td>
 </tr>
