--- a/app/views/users/admin_views/_index.html.erb
+++ b/app/views/users/admin_views/_index.html.erb
@@ -1,26 +1,36 @@
 <header class="css-body-header">
   <%= render partial: 'shared/index_page_header',
-             locals: @view.locals = { title: 'Admin Dashboard - Users' }
+             locals: { locals: { title: 'Admin Dashboard - Users' } }
   %>
 </header>
 
+<%
+#locals[:teamsx] = Channel.where(slack_channel_name: 'installation').select("DISTINCT ON(slack_team_id)*").reorder('slack_team_id ASC')
+#teams = locals[:teams]
+#num_teams = teams.size
+first_id = locals[:teams][0].id
+%>
 <main class="css-body-main">
   <div class="container">
-    <h2>Users<%= " (#{User.count})" %></h2>
+    <h2>Users<%= " (#{locals[:users].size})" %></h2>
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
           <th>Name</th>
           <th>Email</th>
           <th>SignUp Date</th>
-          <th><%= link_to 'Oauth Providers', omniauth_providers_path %><%= " (#{OmniauthProvider.count})" %></th>
-          <th><%= link_to 'Teams', teams_path %><%= " (#{Team.count})" %></th>
+          <th><u><%= link_to 'Installations', installations_path %></u><%= " (#{locals[:installations].length} #{'time'.pluralize(locals[:installations].length)}) by" %></th>
+          <th><u><%= link_to 'Teams', teams_path %></u><%= " (#{locals[:teams].length} different #{'team'.pluralize(locals[:teams].length)})" %></th>
         </tr>
       </thead>
       <tbody>
         <% User.all.each do |user| %>
           <%= render partial: 'users/admin_views/index_user',
-                     locals: @view.locals = { user: user }
+                     locals: { locals: { user: user,
+                                         installations: locals[:installations],
+                                         teams: locals[:teams]
+                                       }
+                             }
           %>
         <% end %>
       </tbody>
