--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,3 @@
 <%= render partial: 'users/admin_views/index',
-           locals: @view.locals = {}
+           locals: { locals: @view.locals }
 %>
