--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <%= render partial: 'users/admin_views/show',
-           locals: @view.locals = {}
+           locals: { locals: @view.locals }
 %>
