--- a/app/views/channels/admin_views/_index_bot_channel.html.erb
+++ b/app/views/channels/admin_views/_index_bot_channel.html.erb
@@ -6,5 +6,5 @@
   <td><%= locals[:channel].deleted %></td>
   <td><%= locals[:channel].created_at.strftime("%c") %></td>
   <td><%= locals[:channel].updated_at.strftime("%c") %></td>
-  <td><%= "0" %></td>
+  <td><%= locals[:tasks].length %></td>
 </tr>
