--- a/app/views/layouts/_page_header_navbar_admin_links.html.erb
+++ b/app/views/layouts/_page_header_navbar_admin_links.html.erb
@@ -4,6 +4,6 @@
   <%= link_to "Teams", teams_path, class: "btn btn-link" %>
   <%= link_to "Members", members_path, class: "btn btn-link" %>
   <%= link_to "Channels", channels_path, class: "btn btn-link" %>
-  <%= link_to "Channel Lists", items_path, class: "btn btn-link" %>
-  <%= link_to "Bot Lists", '#', class: "btn btn-link" %>
+  <%= link_to "Task Lists", items_path, class: "btn btn-link" %>
+  <%= link_to "Bot Task Lists", '#', class: "btn btn-link" %>
 </div>
