--- a/app/views/channels/admin_views/_index_team.html.erb
+++ b/app/views/channels/admin_views/_index_team.html.erb
@@ -1,6 +1,8 @@
-<h3><%= "Active Channels(#{locals[:channels].length}) for Team #{locals[:team].auth_json['info']['team']} added by #{locals[:team].auth_json['info']['user']}" %></h3>
-<% unless locals[:channels].empty? %>
+<% active_channels = locals[:shared_channels].length + locals[:bot_channels].length %>
+<h3><%= "Active Channels(#{active_channels}) for Team #{locals[:team].auth_json['info']['team']} added by #{locals[:team].auth_json['info']['user']}" %></h3>
+<% unless active_channels == 0 %>
   <table class="table table-bordered table-hover">
+    <span style="font-size: 1.2em;"><%= "Shared Channels(#{locals[:shared_channels].length})" %></span>
     <thead>
       <tr>
         <th>Name</th>
@@ -10,16 +12,48 @@
         <th>Deleted</th>
         <th>Added To MiaDo on Date</th>
         <th>Last Updated Date</th>
-        <th>Task Lists</th>
+        <th>Tasks</th>
       </tr>
     </thead>
     <tbody>
-      <% locals[:channels].each do |channel| %>
-        <%= render partial: 'channels/admin_views/index_channel',
-                   locals: { locals: { channel: channel } }
+      <% locals[:shared_channels].each do |channel| %>
+        <%= render partial: 'channels/admin_views/index_shared_channel',
+                   locals: { locals: { channel: channel,
+                                       items: ListItem.items(slack_team_id: channel.slack_team_id,
+                                                             slack_channel_id: channel.slack_channel_id)
+                                     }
+                           }
         %>
       <% end %>
     </tbody>
+  </table>
+
+  <table class="table table-bordered table-hover">
+    <span style="font-size: 1.2em;"><%= "Bot Channels(#{locals[:bot_channels].length})" %></span>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Slack Chan Id</th>
+        <th>Dm User Id</th>
+        <th>Archived?</th>
+        <th>Deleted</th>
+        <th>Added To MiaDo on Date</th>
+        <th>Last Updated Date</th>
+        <th>Tasks</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% locals[:bot_channels].each do |channel| %>
+        <%= render partial: 'channels/admin_views/index_shared_channel',
+                   locals: { locals: { channel: channel,
+                                       items: ListItem.items(slack_team_id: channel.slack_team_id,
+                                                             slack_channel_id: channel.slack_channel_id)
+                                     }
+                           }
+        %>
+      <% end %>
+    </tbody>
+
   </table>
   <% end %>
 <br>
