--- a/app/views/teams/admin_views/_index.html.erb
+++ b/app/views/teams/admin_views/_index.html.erb
@@ -11,9 +11,9 @@
     <% locals[:teams].each do |channel| %>
       <%= render partial: 'teams/admin_views/show_team',
                  locals: { locals: { team: channel,
-                                     members: Channel.team_members(channel.slack_team_id),
-                                     channels: Channel.team_channels(channel.slack_team_id),
-                                     lists: Channel.team_lists(channel.slack_team_id),
+                                     members: Channel.team_members(slack_team_id: channel.slack_team_id),
+                                     channels: Channel.team_channels(slack_team_id: channel.slack_team_id),
+                                     lists: Channel.team_lists(slack_team_id: channel.slack_team_id),
                                      auth_info: channel.auth_json['info'],
                                      auth_extra: channel.auth_json['extra']
                                    }
