[WIP]21.update-admin-console: Add MiaDo installation time to members report.

--- a/app/views/channels/admin_views/_index_shared_channel.html.erb
+++ b/app/views/channels/admin_views/_index_shared_channel.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= locals[:channel].slack_channel_name %></td>
   <td><%= locals[:channel].slack_channel_id %></td>
-  <td><%= locals[:channel].dm_user_id %></td>
+  <td><%= locals[:channel].members_hash[ locals[:channel].slack_user_id ]['slack_user_name'] %></td>
   <td><%= locals[:channel].archived %></td>
   <td><%= locals[:channel].deleted %></td>
   <td><%= locals[:channel].created_at.strftime("%c") %></td>
