--- a/app/views/channels/admin_views/_index_team.html.erb
+++ b/app/views/channels/admin_views/_index_team.html.erb
@@ -1,5 +1,5 @@
 <% active_channels = locals[:shared_channels].length + locals[:bot_channels].length %>
-<h3><%= "Active Channels(#{active_channels}) for Team #{locals[:team].auth_json['info']['team']} added by #{locals[:team].auth_json['info']['user']}" %></h3>
+<h3><%= "Active Channels(#{active_channels}) for Team #{locals[:team].auth_json['info']['team']}" %></h3>
 <% unless active_channels == 0 %>
   <table class="table table-bordered table-hover">
     <span style="font-size: 1.2em;"><%= "Shared Channels(#{locals[:shared_channels].length})" %></span>
@@ -7,7 +7,7 @@
       <tr>
         <th>Name</th>
         <th>Slack Chan Id</th>
-        <th>Dm User Id</th>
+        <th>Created by</th>
         <th>Archived?</th>
         <th>Deleted</th>
         <th>Added To MiaDo on Date</th>
