--- a/app/views/items/admin_views/_index.html.erb
+++ b/app/views/items/admin_views/_index.html.erb
@@ -11,6 +11,7 @@
     <% locals[:teams].each do |install_channel| %>
       <%= render partial: 'items/admin_views/index_team',
                  locals: { locals: { install_channel: install_channel,
+                                     auth_info: install_channel.auth_json['info'],
                                      items: ListItem.items(slack_team_id: install_channel.slack_team_id)
                                    }
                          }
