--- a/app/views/teams/admin_views/_index.html.erb
+++ b/app/views/teams/admin_views/_index.html.erb
@@ -6,7 +6,7 @@
 
 <main class="css-body-main">
   <div class="container">
-    <h2>Teams<%= " (#{locals[:teams].length})" %></h2>
+    <h2>Teams<%= " (#{locals[:teams].length}) whose members have installed MiaDo #{locals[:installations].length} times." %></h2>
     <br>
     <% locals[:teams].each do |channel| %>
       <%= render partial: 'teams/admin_views/show_team',
@@ -14,8 +14,10 @@
                                      members: Channel.team_members(slack_team_id: channel.slack_team_id),
                                      channels: Channel.team_channels(slack_team_id: channel.slack_team_id),
                                      lists: Channel.team_lists(slack_team_id: channel.slack_team_id),
+                                     installations: Channel.installations(slack_team_id: channel.slack_team_id),
                                      auth_info: channel.auth_json['info'],
-                                     auth_extra: channel.auth_json['extra']
+                                     auth_extra: channel.auth_json['extra'],
+                                     last_activity: Channel.last_activity(slack_team_id: channel.slack_team_id)
                                    }
                          }
       %>
