--- a/app/views/users/admin_views/_index.html.erb
+++ b/app/views/users/admin_views/_index.html.erb
@@ -19,8 +19,9 @@ first_id = locals[:teams][0].id
           <th>Name</th>
           <th>Email</th>
           <th>SignUp Date</th>
-          <th><u><%= link_to 'Installations', installations_path %></u><%= " (#{locals[:installations].length} #{'time'.pluralize(locals[:installations].length)}) by" %></th>
-          <th><u><%= link_to 'Teams', teams_path %></u><%= " (#{locals[:teams].length} different #{'team'.pluralize(locals[:teams].length)})" %></th>
+          <th>Last Activity</th>
+          <th><u><%= link_to 'Installations', installations_path %></u><%= " (#{locals[:installations].length}) by" %></th>
+          <th><u><%= link_to 'Teams', teams_path %></u><%= " (#{locals[:teams].length})" %></th>
         </tr>
       </thead>
       <tbody>
@@ -28,7 +29,8 @@ first_id = locals[:teams][0].id
           <%= render partial: 'users/admin_views/index_user',
                      locals: { locals: { user: user,
                                          installations: locals[:installations],
-                                         teams: locals[:teams]
+                                         teams: locals[:teams],
+                                         last_activity: Channel.last_activity(user: user)
                                        }
                              }
           %>
